--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -25,7 +25,7 @@ jobs:
           #  - read:user     (for user related data)
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: GeroVanMi
@@ -48,5 +48,3 @@ jobs:
           plugin_wakatime: yes
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors-graphs, os-graphs
           plugin_wakatime_languages_ignored: markdown, plaintext, text, xml, yaml, JSON
-          plugin_wakatime_days: 365
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
